syntax = "proto3";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  // Gets a greeting
  rpc GetHello (HelloIdRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  string surname = 2;
  string address = 16;
}

// The request message containing the user's id.
message HelloIdRequest {
  int32 id = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
